--- a/index.html
+++ b/index.html
@@ -201,6 +201,27 @@
 
             </div>
         </section>
+        <section id="partners" class="py-24 bg-white">
+        <div class="container mx-auto px-6">
+            <div class="max-w-4xl mx-auto text-center bg-slate-100 rounded-3xl p-10 md:p-16 animate-on-scroll" data-animation="fade-up">
+                <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-4" data-lang-en="Are You a Farmer or Producer?" data-lang-hi="क्या आप किसान या उत्पादक हैं?">Are You a Farmer or Producer?</h2>
+                <p class="text-slate-600 max-w-2xl mx-auto mb-10" data-lang-en="Join the AgriChain network to bring transparency to your products, gain consumer trust, and secure your place in the future of food." data-lang-hi="अपने उत्पादों में पारदर्शिता लाने, उपभोक्ता का विश्वास हासिल करने और भोजन के भविष्य में अपना स्थान सुरक्षित करने के लिए एग्रीचेन नेटवर्क से जुड़ें।">
+                    Join the AgriChain network to bring transparency to your products, gain consumer trust, and secure your place in the future of food.
+                </p>
+                <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
+                    <a href="add-farmer.html" class="w-full sm:w-auto inline-block bg-indigo-600 text-white font-bold text-lg px-8 py-4 rounded-full shadow-lg shadow-indigo-500/30 hover:bg-indigo-700 transform hover:-translate-y-1 transition-all duration-300" data-lang-en="Register as a Farmer" data-lang-hi="किसान के रूप में पंजीकरण करें">
+                        Register as a Farmer
+                    </a>
+                    <a href="add-harvest.html" class="w-full sm:w-auto inline-block bg-white text-slate-700 font-bold text-lg px-8 py-4 rounded-full shadow-md hover:bg-slate-50 transform hover:-translate-y-1 transition-all duration-300 border border-slate-200" data-lang-en="Log a Harvest" data-lang-hi="एक फसल लॉग करें">
+                        Log a Harvest
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    ```
+
+You can choose either option, but **Option 1 (Navigation Dropdown)** is the most standard and scalable solution. You can also remove the "For Partners" links from the footer now that they are in a more prominent location.
 
         <section id="stats" class="py-24 md:py-32 bg-slate-900 text-white">
             <div class="container mx-auto px-6">
