--- a/add-harvest.html
+++ b/add-harvest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgriChain - Log New Harvest</title>
+    <title data-lang-en="AgriChain - Register New Harvest" data-lang-hi="एग्रीचेन - नई फसल का पंजीकरण">AgriChain - Register New Harvest</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator/qrcode.js"></script>
@@ -17,12 +17,19 @@
     <nav class="bg-slate-900/80 backdrop-blur-lg shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <a href="index.html#home" class="text-2xl font-bold text-white flex items-center gap-2 drop-shadow-lg">
+                <a href="index.html#home" class="text-2xl font-bold text-white flex items-center gap-2 drop-shadow-lg" data-lang-en="AgriChain" data-lang-hi="एग्रीचेन">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.783-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" /></svg>
                     AgriChain
                 </a>
-                <a href="index.html" class="px-4 py-2 text-white font-medium rounded-full hover:bg-white/10 transition-colors">Back to Home</a>
+                <a href="index.html" class="px-4 py-2 text-white font-medium rounded-full hover:bg-white/10 transition-colors" data-lang-en="Back to home" data-lang-hi="पिछला पन्ना">Back to Home</a>
             </div>
+            <div class="flex items-center gap-4">
+                    <select id="language-selector" class="bg-slate-700 text-white rounded-full py-2 px-3 text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        <option value="en">English</option>
+                        <option value="hi">हिन्दी</option>
+                    </select>
+                    <a href="#contact" class="hidden md:inline-block bg-white/10 text-white font-semibold px-5 py-2 rounded-full border border-white/20 hover:bg-white/20 transition-all" data-lang-en="Contact Us" data-lang-hi="हमसे संपर्क करें">Contact Us</a>
+                </div>
         </div>
     </nav>
 
@@ -30,26 +37,26 @@
         <div class="container mx-auto px-6">
             <div class="max-w-3xl mx-auto">
                 <div class="text-center mb-12">
-                    <h1 class="text-3xl md:text-4xl font-bold text-white mb-4">Log New Harvest Details</h1>
-                    <p class="text-slate-400">Create a new entry on the blockchain for a harvested product.</p>
+                    <h1 class="text-3xl md:text-4xl font-bold text-white mb-4" data-lang-en="Log New Harvest Details" data-lang-hi="नई फसल का विवरण भरे">Log New Harvest Details</h1>
+                    <p class="text-slate-400" data-lang-en="Create a new entry on the blockchain for a harvested product." data-lang-hi="उत्पादित उत्पाद के लिए नई प्रविष्टि बनाएं।">Create a new entry on the blockchain for a harvested product.</p>
                 </div>
 
                 <div class="bg-white p-8 rounded-2xl shadow-2xl shadow-slate-200/20 border border-slate-200/10">
                     <form id="harvestForm" onsubmit="generateQR(event)" class="space-y-6">
                         <div>
-                            <label for="productId" class="block text-sm font-medium text-slate-700">Unique Product ID</label>
+                            <label for="productId" class="block text-sm font-medium text-slate-700"data-lang-en="Unique Product ID" data-lang-hi="अद्वितीय उत्पाद आईडी">Unique Product ID</label>
                             <input type="text" id="productId" class="mt-1 block w-full px-4 py-3 bg-slate-50 border-2 border-slate-200 rounded-lg focus:outline-none focus:ring-4 focus:ring-indigo-300 focus:border-indigo-500 transition" value="AGR${Date.now()}" required>
-                            <p class="text-xs text-slate-500 mt-1">This ID is auto-generated to be unique. Do not change unless necessary.</p>
+                            <p class="text-xs text-slate-500 mt-1" data-lang-en="This ID is auto-generated to be unique. Do not change unless necessary." data-lang-hi="यह आईडी अद्वितीय होने के लिए स्वतः जनरेट की गई है। जब तक आवश्यक न हो, इसे न बदलें।">This ID is auto-generated to be unique. Do not change unless necessary.</p>
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <div>
-                                <label for="productName" class="block text-sm font-medium text-slate-700">Product Name</label>
+                                <label for="productName" class="block text-sm font-medium text-slate-700" data-lang-en="Product Name" data-lang-hi="प्रोडक्ट का नाम">Product Name</label>
                                 <input type="text" id="productName" class="mt-1 block w-full px-4 py-3 bg-slate-50 border-2 border-slate-200 rounded-lg focus:outline-none focus:ring-4 focus:ring-indigo-300 focus:border-indigo-500 transition" placeholder="e.g., Organic Tomatoes" required>
                             </div>
                             <div>
-                                <label for="farmerId" class="block text-sm font-medium text-slate-700">Farmer</label>
+                                <label for="farmerId" class="block text-sm font-medium text-slate-700" data-lang-en="Farmer" data-lang-hi="किसान">Farmer</label>
                                 <select id="farmerId" class="mt-1 block w-full px-4 py-3 bg-slate-50 border-2 border-slate-200 rounded-lg focus:outline-none focus:ring-4 focus:ring-indigo-300 focus:border-indigo-500 transition" required>
-                                    <option value="" disabled selected>Select a Farmer</option>
+                                    <option value="" disabled selected data-lang-en="Select a Framer" data-lang-hi="किसान का चयन करें">Select a Farmer</option>
                                     <option value="FARM001">Ramesh Kumar (FARM001)</option>
                                     <option value="FARM002">Sita Devi (FARM002)</option>
                                 </select>
@@ -57,27 +64,27 @@
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <div>
-                                <label for="harvestDate" class="block text-sm font-medium text-slate-700">Harvest Date</label>
+                                <label for="harvestDate" class="block text-sm font-medium text-slate-700" data-lang-en="Harvested Date" data-lang-hi="कटाई की तारीख">Harvested Date</label>
                                 <input type="date" id="harvestDate" class="mt-1 block w-full px-4 py-3 bg-slate-50 border-2 border-slate-200 rounded-lg focus:outline-none focus:ring-4 focus:ring-indigo-300 focus:border-indigo-500 transition" required>
                             </div>
                             <div>
-                                <label for="quantity" class="block text-sm font-medium text-slate-700">Quantity (in Kg)</label>
+                                <label for="quantity" class="block text-sm font-medium text-slate-700" data-lang-en="Quality" data-lang-hi="गुणवत्ता (किलोग्राम में)">Quantity (in Kg)</label>
                                 <input type="number" id="quantity" class="mt-1 block w-full px-4 py-3 bg-slate-50 border-2 border-slate-200 rounded-lg focus:outline-none focus:ring-4 focus:ring-indigo-300 focus:border-indigo-500 transition" placeholder="e.g., 500" required>
                             </div>
                         </div>
 
                         <div class="text-right pt-4">
-                            <button type="submit" class="bg-gradient-to-r from-green-400 to-teal-500 text-white font-bold text-lg px-8 py-4 rounded-full shadow-lg shadow-green-500/30 hover:shadow-2xl hover:shadow-green-500/40 transform hover:-translate-y-1.5 transition-all duration-300">
+                            <button type="submit" class="bg-gradient-to-r from-green-400 to-teal-500 text-white font-bold text-lg px-8 py-4 rounded-full shadow-lg shadow-green-500/30 hover:shadow-2xl hover:shadow-green-500/40 transform hover:-translate-y-1.5 transition-all duration-300" data-lang-en="Log Harvest & Generate QR" data-lang-hi="फसल पंजीकरण करें और QR जनरेट करें">
                                 Log Harvest & Generate QR
                             </button>
                         </div>
                     </form>
 
                     <div id="qrCodeContainer" class="hidden mt-12 pt-8 border-t-2 border-dashed border-slate-200 text-center">
-                        <h3 class="text-2xl font-bold text-slate-900 mb-4">Product Story QR Code</h3>
-                        <p class="text-slate-600 max-w-md mx-auto mb-6">Attach this QR code to the product packaging. Consumers can scan it to see the full journey.</p>
+                        <h3 class="text-2xl font-bold text-slate-900 mb-4" data-lang-en="Product Story QR Code" data-lang-hi="उत्पाद की कहानी के लिए QR कोड">Product Story QR Code</h3>
+                        <p class="text-slate-600 max-w-md mx-auto mb-6" data-lang-en="Attach this QR code to the product packaging. Consumers can scan it to see the full journey." data-lang-hi="इस क्यूआर कोड को उत्पाद की पैकेजिंग पर लगाएँ। उपभोक्ता इसे स्कैन करके पूरी यात्रा देख सकते हैं।">Attach this QR code to the product packaging. Consumers can scan it to see the full journey.</p>
                         <div id="qrcode" class="flex justify-center p-4 bg-white rounded-lg shadow-inner border border-slate-200 w-64 h-64 mx-auto"></div>
-                        <button onclick="window.print()" class="mt-8 bg-slate-600 text-white font-bold text-md px-6 py-3 rounded-full hover:bg-slate-700 transition-all">
+                        <button onclick="window.print()" class="mt-8 bg-slate-600 text-white font-bold text-md px-6 py-3 rounded-full hover:bg-slate-700 transition-all" data-lang-en="Print QR Code" data-lang-hi="QR कोड प्रिंट करें">
                             Print QR Code
                         </button>
                     </div>
@@ -88,6 +95,41 @@
     </main>
 
     <script>
+        document.addEventListener('DOMContentLoaded', function(){
+            const languageSelector = document.getElementById('language-selector');  
+            // --- Language Switcher Logic ---
+            function setLanguage(lang) {
+                document.querySelectorAll('[data-lang-en]').forEach(element => {
+                    if (lang === 'hi') {
+                        element.textContent = element.dataset.langHi;
+                    } else {
+                        element.textContent = element.dataset.langEn;
+                    }
+                });
+
+                document.querySelectorAll('[data-lang-en-placeholder]').forEach(element => {
+                    if (lang === 'hi') {
+                        element.placeholder = element.dataset.langHiPlaceholder;
+                    } else {
+                        element.placeholder = element.dataset.langEnPlaceholder;
+                    }
+                });
+
+                document.documentElement.lang = lang; // Update HTML lang attribute
+                localStorage.setItem('agrichain_lang', lang); // Save preference
+            }
+
+            // Load saved language or default to English
+            const savedLang = localStorage.getItem('agrichain_lang') || 'hi';
+            languageSelector.value = savedLang;
+
+            setLanguage(savedLang);
+
+            languageSelector.addEventListener('change', (event) => {
+                setLanguage(event.target.value);
+            });
+        });
+        
         function generateQR(event) {
             event.preventDefault(); // Prevent the form from submitting traditionally
 
